# mystories_backend

./: .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  README.md
myhistories/: .dockerignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
myhistories/apps/authentication/: apps.py  backends.py  models.py  renderers.py  serializers.py  signals.py  tests.py  urls.py  views.py
myhistories/apps/authentication/migrations/: 0001_initial.py
myhistories/apps/core/: models.py  tests_utils.py
myhistories/apps/histories/: apps.py  models.py  relations.py  renderers.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
myhistories/apps/histories/migrations/: 0001_initial.py  0002_auto_20200604_1330.py  0004_speech.py  (+4 more)
myhistories/apps/notifications/: models.py  tests.py  urls.py  views.py
myhistories/apps/profiles/: models.py  renderers.py  serializers.py  tests.py  urls.py  views.py
myhistories/myhistories/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
mystories/: .dockerignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  urls.py
mystories/apps/authentication/: models.py  signals.py  tests.py  urls.py  views.py
mystories/apps/core/: permissions.py  renderers.py
mystories/apps/histories/: apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
mystories/apps/notifications/: models.py  serializers.py  tests.py  views.py
mystories/apps/profiles/: models.py  serializers.py  tests.py  urls.py  views.py
mystories/apps/stories/: apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  tts.py  urls.py  views.py
mystories/myhistories/: celery.py  settings.py
mystories/mystories/: asgi.py  settings.py  urls.py  wsgi.py
mystories/nginx/: nginx.conf
(+47 files in other folders)
